# django-setup

./: .gitignore  README.md  django_setup.py  pyproject.toml
tests/: test_common_init.py  test_django_setup.py
tests/settings/: default.py
